--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "chart.js": "^1.1.1",
+    "highcharts": "^4.2.6",
     "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.1",
+    "react-highcharts": "^10.0.0",
     "react-router": "^2.7.0"
   },
   "scripts": {
