--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chart.js": "^1.1.1",
+    "font-awesome": "^4.6.3",
     "highcharts": "^4.2.6",
     "lodash": "^4.15.0",
     "react": "^15.3.1",
