--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.6.3",
     "highcharts": "^4.2.6",
     "lodash": "^4.15.0",
+    "moment": "^2.14.1",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-chartjs": "^0.8.0",
